[package]
name = "rss_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
termion = "1.5"
colored = "2.0"
